k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-api-service
  namespace: default
  labels:
    app: bff-api
spec:
  type: ClusterIP
  selector:
    app: bff-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
